# 04-dev-bigdaddy-cfr2-django

./: .env  Dockerfile  fly.toml  pyproject.toml  startup.sh  tempbash.txt  tempdisableflattening.txt
blog/: urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/: base.html  main.html
helpers/cloudflare/: settings.py
myapp/: settings.py  urls.py  views.py
myapp/templates/: xmain.html
