[tool.poetry]
name = "django-cf-r2-poetry"
version = "0.1.0"
description = ""
authors = ["Chef <cheftech@patraldo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
django-storages = {extras = ["s3"], version = "^1.14.4"}
python-decouple = "^3.8"
pillow = "^11.0.0"
gunicorn = "^23.0.0"
paginator = "^0.5.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
